[package]
authors = ["Chop Tr (chop@chop.ink)"]
name = "chess_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bevy-inspector-egui = "0.12.1"
chess = "3.2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
